<resources>
    <string name="app_name">LoCafe</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_have_account">Have an account? Login here.</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_search">Search</string>
    <string name="title_queue">Queue</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_account">Account</string>
    <string name="search_header">Search for a workspace</string>
    <string name="start_typing">e.g. \"Dennys\"</string>
    <string name="queue_text_unqueued">Your place in line will show up here</string>
    <string name="queue_queuenow">Queue Now</string>
    <string name="queue_unqueue">Leave Queue</string>
    <string name="queue_text_queued">You are currently number</string>
    <string name="queue_number_ph">14</string>
    <string name="queue_not_found">You are currently not in a queue.</string>
    <string name="account_image_content">Account Icon</string>
    <string name="search_result_header">Search Results</string>
    <string name="location_details_title_temp">Location Name</string>
    <string name="delete">Delete</string>
    <string name="addFavourite"> Add to Favourites</string>
    <string name="update"> Update</string>
    <string name="personalInfo">Personal Information</string>
    <string name="resultsFor">Results for: </string>
    <string name="makeBooking">Make a Booking: </string>
    <string name="date">Date: </string>
    <string name="startTime">Start Time: </string>
    <string name="endTime">End Time: </string>
    <string-array name="favourites">
        <item>Starbucks</item>
        <item>Blenz</item>
        <item>Waves</item>
        <item>McDonald\'s</item>
        <item>Tim Horton\'s</item>
        <item>49th Parallel</item>
        <item>Favourite</item>
        <item>Favourite</item>
        <item>Favourite</item>
        <item>Favourite</item>
    </string-array>
    <string-array name="account">
        <item>Personal Information</item>
        <item>Bookings</item>
        <item>Logout</item>
    </string-array>
</resources>