<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="ca.bcit.locafe.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_queue"
        android:name="ca.bcit.locafe.ui.queue.QueueFragment"
        android:label="@string/title_queue"
        tools:layout="@layout/fragment_queue" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="ca.bcit.locafe.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="ca.bcit.locafe.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_favourites" />
</navigation>