<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfoActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginStart="30dp"
        android:text="@string/personalInfo"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_firstName"
            android:layout_marginStart="30dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/updateFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_firstName"
            android:inputType="text"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="30dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_lastName"
            android:layout_marginStart="30dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/updateLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_lastName"
            android:inputType="text"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:layout_marginStart="30dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/updateEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:layout_gravity="start"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_phone"
            android:layout_marginStart="30dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/updatePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_phone"
            android:inputType="text|phone"
            android:layout_gravity="start"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="30dp"/>

    </LinearLayout>


    <Button
        android:id="@+id/btnUpdate"
        android:text="@string/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Widget.AppCompat.Button.Colored"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorAccentLight"
        android:layout_marginTop="20dp"/>


</LinearLayout>